TDD: SingleValueOptionParserTest RED -> GREEN